--- a/portal_hr_loan/views/hr_loan_portal_templates.xml
+++ b/portal_hr_loan/views/hr_loan_portal_templates.xml
@@ -110,10 +110,12 @@
                      <t t-foreach="salaries" t-as="salary">
                         <tr>
                            <td>
-                              <t t-esc="salary.date" />
+                              <t t-esc="salary.payslip_run_id.name" />
                            </td>
                            <td>
-                              <t t-esc="salary.amount" />
+                              <t t-esc="salary.basic-_wage" />
+                              <t t-esc="salary.gross-_wage" />
+                              <t t-esc="salary.net-_wage" />
                            </td>
                            <td>
                               <t t-esc="salary.description or ''" />
