--- a/portal_hr_loan/views/hr_loan_portal_templates.xml
+++ b/portal_hr_loan/views/hr_loan_portal_templates.xml
@@ -118,7 +118,7 @@
                               <t t-esc="salary.net_wage" />
                            </td>
                            <td>
-                              <t t-esc="salary.description or ''" />
+                              <!-- <t t-esc="salary.description or ''" /> -->
                            </td>
                         </tr>
                      </t>
