--- a/portal_hr_loan/views/hr_loan_portal_templates.xml
+++ b/portal_hr_loan/views/hr_loan_portal_templates.xml
@@ -98,7 +98,7 @@
          <t t-call="portal.portal_layout">
             <div class="container">
                <h1>مرتباتي</h1>
-               <table class="table table-bordered">
+               <table class="table table-striped">
                   <thead>
                      <tr>
                         <th>الاسم</th>
