--- a/portal_attendance_artx/views/attendance_views.xml
+++ b/portal_attendance_artx/views/attendance_views.xml
@@ -18,7 +18,7 @@
                 </xpath>
             </template> -->
             
-            <template id="portal_my_home_sale" name="Show Quotations / Sales Orders" customize_show="True"
+            <!-- <template id="portal_my_home_sale" name="Show Quotations / Sales Orders" customize_show="True"
                     inherit_id="portal.portal_my_home" priority="20">
                 <div class="oe_structure" position="inside">
                     <div class="container">
@@ -28,7 +28,7 @@
                         </button>
                     </div>
                 </div>
-            </template>
+            </template> -->
 
             <!-- Inherit the Portal Home Template -->
             <!-- <template id="portal_my_home_attendance" inherit_id="portal.portal_my_home" priority="20">
