--- a/portal_attendance_artx/views/attendance_views.xml
+++ b/portal_attendance_artx/views/attendance_views.xml
@@ -228,14 +228,96 @@
                 </xpath>
             </template>
             <template id="portal_my_attendance" name="Portal Attendance">
+                    <t t-call="portal.portal_layout">
+                        <div class="container">
+                            <h3>سجلات الحضور و الانصراف</h3>
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>الحضور</th>
+                                        <th>الانصراف</th>
+                                        <th>ساعات العمل</th>
+                                        <th>الوقت الاضافي</th>
+                                        <th>التاخير</th>
+                                        <th>الخصم</th>
+                                        <th>تصحيح</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <t t-foreach="attendance_records" t-as="record">
+                                        <tr>
+                                            <td><t t-esc="record.check_in or ''"/></td>
+                                            <td><t t-esc="record.check_out or ''"/></td>
+                                            <td>
+                                                <t t-if="record.worked_hours">
+                                                    <t t-set="total_minutes" t-value="int(record.worked_hours * 60)"/>
+                                                    <t t-set="hours" t-value="total_minutes // 60"/>
+                                                    <t t-set="minutes" t-value="total_minutes % 60"/>
+                                                    <t t-esc="('%02d:%02d' % (hours, minutes))"/>
+                                                </t>
+                                            </td>
+                                            <td><t t-esc="record.overtime_minutes or ''"/></td>
+                                            <td><t t-esc="record.lateness or ''"/></td>
+                                            <td><t t-esc="record.deduction_amount or ''"/></td>
+                                            <td>
+                                                <button type="button" class="btn btn-warning" 
+                                                    data-bs-toggle="modal" t-att-data-bs-target="'#correctAttendanceModal-%s' % record.id">
+                                                    تصحيح
+                                                </button>
+                                                <!-- Modal (Popup Form) -->
+                                                <div class="modal fade" t-att-id="'correctAttendanceModal-%s' % record.id" tabindex="-1" aria-hidden="true">
+                                                    <div class="modal-dialog">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h5 class="modal-title">تصحيح الحضور</h5>
+                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                        </div>
+                                                        <form action="/portal/request_attendance_correction" method="post">
+                                                            <div class="modal-body">
+                                                                <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
+                                                                <input type="hidden" name="attendance_id" t-att-value="record.id"/>
+                                                                <label>الحضور (المسجل):</label>
+                                                                <input type="datetime-local" name="original_check_in" t-att-value="record.check_in or ''" class="form-control" readonly="1"/>
+                                                                <label>الخروج (المسجل):</label>
+                                                                <input type="datetime-local" name="original_check_out" t-att-value="record.check_out or ''" class="form-control" readonly="1"/>
+                                                                <label>تصحيح الحضور:</label>
+                                                                <input type="datetime-local" name="corrected_check_in" class="form-control" required="true"/>
+                                                                <label>تصحيح الانصراف:</label>
+                                                                <input type="datetime-local" name="corrected_check_out" class="form-control" required="true"/>
+                                                                <label>سبب التصحيح:</label>
+                                                                <textarea name="correction_reason" class="form-control"></textarea>
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <button type="submit" class="btn btn-success">إرسال التصحيح</button>
+                                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
+                                                            </div>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </t>
+                            </tbody>
+                        </table>
+                    </div>
+                </t>
+            </template>
+
+
+                        <!-- <table class="table table-bordered"> -->
+                                    <!-- <th>Date</th> -->
+                                        <!-- <td><t t-if="'worked_hours' in record"><t t-esc="record.get('worked_hours', '')"/></t></td> -->
+                                            <!-- Modal (Popup Form) -->
+
+
+            <!-- <template id="portal_my_attendance" name="Portal Attendance">
                 <t t-call="portal.portal_layout">
                     <div class="container">
                         <h3>سجلات الحضور و الانصراف</h3>
                                 <table class="table table-striped">
-                        <!-- <table class="table table-bordered"> -->
                             <thead>
                                 <tr>
-                                    <!-- <th>Date</th> -->
                                     <th>الحضور</th>
                                     <th>الانصراف</th>
                                     <th>ساعات العمل</th>
@@ -254,7 +336,6 @@
                                         <td>
                                             <t t-esc="record.get('check_out', '')"/>
                                         </td>
-                                        <!-- <td><t t-if="'worked_hours' in record"><t t-esc="record.get('worked_hours', '')"/></t></td> -->
                                         <td>
                                             <t t-if="'worked_hours' in record">
                                                 <t t-set="total_minutes" t-value="int(record['worked_hours'] * 60)"/>
@@ -276,7 +357,6 @@
                                             <button type="button" class="btn btn-warning" data-bs-toggle="modal" t-att-data-bs-target="'#correctAttendanceModal-%s' % record['id']">
                                             تصحيح
                                             </button>
-                                            <!-- Modal (Popup Form) -->
                                             <div class="modal fade" t-att-id="'correctAttendanceModal-%s' % record['id']" tabindex="-1" aria-hidden="true">
                                                 <div class="modal-dialog">
                                                     <div class="modal-content">
@@ -357,7 +437,7 @@
                         </form>
                     </div>
                 </t>
-            </template>
+            </template> -->
             <template id="portal_my_home_vendor_rfq" name="Show Vendor RFQs"
                 customize_show="True" inherit_id="portal.portal_my_home"
                 priority="25">
