--- a/hr_zk_attendance_update/views/biometric_device_details_views.xml
+++ b/hr_zk_attendance_update/views/biometric_device_details_views.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-    <!--Biometric device configuration tree view-->
-    <record id="biometric_device_details_view_tree" model="ir.ui.view">
-        <field name="name">biometric.device.details.view.tree</field>
+    <!--Biometric device configuration list view-->
+    <record id="biometric_device_details_view_list" model="ir.ui.view">
+        <field name="name">biometric.device.details.view.list</field>
         <field name="model">biometric.device.details</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="device_ip"/>
                 <field name="port_number"/>
-            </tree>
+            </list>
         </field>
     </record>
-    <!--Biometric device configuration tree view-->
+    <!--Biometric device configuration list view-->
     <record id="biometric_device_details_view_form" model="ir.ui.view">
         <field name="name">biometric.device.details.view.form</field>
         <field name="model">biometric.device.details</field>
@@ -53,6 +53,6 @@
     <record id="biometric_device_details_action" model="ir.actions.act_window">
         <field name="name">Biometric Device</field>
         <field name="res_model">biometric.device.details</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 </odoo>
