--- a/hr_zk_attendance_update/views/biometric_device_attendance_menus.xml
+++ b/hr_zk_attendance_update/views/biometric_device_attendance_menus.xml
@@ -32,12 +32,12 @@
         </record>
 
 
-        <record id="view_hr_attendance_tree_inherit" model="ir.ui.view">
-            <field name="name">hr.attendance.tree.view</field>
+        <record id="view_hr_attendance_list_inherit" model="ir.ui.view">
+            <field name="name">hr.attendance.list.view</field>
             <field name="model">hr.attendance</field>
-            <field name="inherit_id" ref="hr_attendance.view_attendance_tree"/>
+            <field name="inherit_id" ref="hr_attendance.view_attendance_list"/>
             <field name="arch" type="xml">
-                <xpath expr="//tree" position="inside">
+                <xpath expr="//list" position="inside">
                     <field name="shift_start" optional="hide"/>
                     <field name="shift_end" optional="hide"/>
                     <field name="deduction_amount" optional="hide"/>
@@ -98,7 +98,7 @@
         <record id="action_zk_machine_attendance" model="ir.actions.act_window">
             <field name="name">Biometric Attendance Logs</field>
             <field name="res_model">zk.machine.attendance</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
 
         <menuitem id="menu_zk_machine_attendance" name="Attendance Logs" parent="menu_biometric_attendance" action="action_zk_machine_attendance"/>
@@ -112,15 +112,15 @@
 <!-- <record id="action_zk_machine_attendance" model="ir.actions.act_window">
     <field name="name">ZK Machine Attendance</field>
     <field name="res_model">hr.zk.attendance</field>
-    <field name="view_mode">tree,form</field>
+    <field name="view_mode">list,form</field>
 </rec ord>-->
 
-    <!--    Daily attendance tree view-->
-    <record id="zk_machine_attendance_view_tree" model="ir.ui.view">
-        <field name="name">zk.machine.attendance.view.tree</field>
+    <!--    Daily attendance list view-->
+    <record id="zk_machine_attendance_view_list" model="ir.ui.view">
+        <field name="name">zk.machine.attendance.view.list</field>
         <field name="model">zk.machine.attendance</field>
         <field name="arch" type="xml">
-            <tree string="Attendance" create="false" delete="false">
+            <list string="Attendance" create="false" delete="false">
                 <!-- <field name="punching_day"/> -->
                 <field name="id"/>
                 <field name="employee_id"/>
@@ -128,14 +128,14 @@
                 <field name="attendance_type"/>
                 <field name="punching_time"/>
                 <field name="address_id"/>
-            </tree>
+            </list>
         </field>
     </record>
     <!--    Attendance analysis action-->
     <record id="zk_machine_attendance_action" model="ir.actions.act_window">
         <field name="name">ZK Machine Attendance</field>
         <field name="res_model">zk.machine.attendance</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">list</field>
         <field name="context">{}</field>
     </record>
 
