--- a/hr_zk_attendance_update/views/biometric_device_attendance_menus.xml
+++ b/hr_zk_attendance_update/views/biometric_device_attendance_menus.xml
@@ -35,7 +35,7 @@
         <record id="view_hr_attendance_list_inherit" model="ir.ui.view">
             <field name="name">hr.attendance.list.view</field>
             <field name="model">hr.attendance</field>
-            <field name="inherit_id" ref="hr_attendance.view_attendance_list"/>
+            <field name="inherit_id" ref="hr_attendance.view_attendance_tree"/>
             <field name="arch" type="xml">
                 <xpath expr="//list" position="inside">
                     <field name="shift_start" optional="hide"/>
