--- a/hr_zk_attendance_update/views/biometric_device_attendance_menus.xml
+++ b/hr_zk_attendance_update/views/biometric_device_attendance_menus.xml
@@ -55,7 +55,7 @@
         </record>
 
         <!-- Add a scheduled action in the XML file to run this cron job daily at midnight -->
-        <record id="ir_cron_attendance_deductions" model="ir.cron">
+        <!-- <record id="ir_cron_attendance_deductions" model="ir.cron">
             <field name="name">Compute Attendance Deductions</field>
             <field name="model_id" ref="model_hr_attendance"/>
             <field name="state">code</field>
@@ -65,7 +65,19 @@
             <field name="numbercall">-1</field>
             <field name="doall">False</field>
             <field name="active" eval="True"/>
-        </record>
+        </record> -->
+
+
+<record id="ir_cron_attendance_deductions" model="ir.cron">
+    <field name="name">Compute Attendance Deductions</field>
+    <field name="model_id" ref="model_hr_attendance"/>
+    <field name="state">code</field>
+    <field name="code">model._cron_compute_attendance_deductions()</field>
+    <field name="interval_number">1</field>
+    <field name="interval_type">days</field>
+    <field name="doall">False</field>
+    <field name="active" eval="True"/>
+</record>
 
         <!-- parent="biometric_device_details_menu" -->
         <record id="zk_machine_attendance_form_view" model="ir.ui.view">
