--- a/advanced_loan_management/views/loan_request_views.xml
+++ b/advanced_loan_management/views/loan_request_views.xml
@@ -4,15 +4,15 @@
         <record id="loan_request_action" model="ir.actions.act_window">
             <field name="name">Loan Request</field>
             <field name="res_model">loan.request</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
         <!--        Loan Request Tree View-->
-        <record id="loan_request_view_tree" model="ir.ui.view">
-            <field name="name">loan.request.view.tree</field>
+        <record id="loan_request_view_list" model="ir.ui.view">
+            <field name="name">loan.request.view.list</field>
             <field name="model">loan.request</field>
             <field name="priority" eval="8"/>
             <field name="arch" type="xml">
-                <tree string="Loan Request">
+                <list string="Loan Request">
                     <field name="name"/>
                     <field name="partner_id"/>
                     <field name="loan_amount"/>
@@ -21,7 +21,7 @@
                     <field name="tenure"/>
                     <field name="company_id"/>
                     <field name="state"/>
-                </tree>
+                </list>
             </field>
         </record>
 
@@ -102,7 +102,7 @@
                             <page string="Repayment schedules"
                                 invisible="state == 'draft'">
                                 <field name="repayment_lines_ids" readonly="1">
-                                    <tree string="tree" create="false">
+                                    <list string="list" create="false">
                                         <field name="name"/>
                                         <field name="date"/>
                                         <field name="amount"/>
@@ -126,7 +126,7 @@
                                                 class="oe_highlight"
                                                 string="View"
                                                 type="object"/>
-                                    </tree>
+                                    </list>
                                 </field>
                             </page>
                             <page string="Documents">
