--- a/advanced_loan_management/views/loan_type_views.xml
+++ b/advanced_loan_management/views/loan_type_views.xml
@@ -4,7 +4,7 @@
     <record id="loan_type_action" model="ir.actions.act_window">
         <field name="name">Loan Type</field>
         <field name="res_model">loan.type</field>
-        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_mode">kanban,list,form</field>
     </record>
 
     <!--        Loan Type Kanban View-->
@@ -44,17 +44,17 @@
     </record>
 
     <!--        Loan Type Tree View-->
-    <record id="loan_type_view_tree" model="ir.ui.view">
-        <field name="name">loan.type.view.tree</field>
+    <record id="loan_type_view_list" model="ir.ui.view">
+        <field name="name">loan.type.view.list</field>
         <field name="model">loan.type</field>
         <field name="priority" eval="8"/>
         <field name="arch" type="xml">
-            <tree string="Loan Type">
+            <list string="Loan Type">
                 <field name="name"/>
                 <field name="loan_amount"/>
                 <field name="interest_rate"/>
                 <field name="processing_fee"/>
-            </tree>
+            </list>
         </field>
     </record>
 
