--- a/advanced_loan_management/views/repayment_lines_views.xml
+++ b/advanced_loan_management/views/repayment_lines_views.xml
@@ -16,18 +16,18 @@
     <record id="repayment_line_action" model="ir.actions.act_window">
         <field name="name">Repayment Line</field>
         <field name="res_model">repayment.line</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="context">{'search_default_loan': 1}</field>
         <field name="search_view_id" ref="repayment_line_default_group"/>
     </record>
 
     <!--        Repayment Line Tree View-->
-    <record id="repayment_line_view_tree" model="ir.ui.view">
-        <field name="name">repayment.line.view.tree</field>
+    <record id="repayment_line_view_list" model="ir.ui.view">
+        <field name="name">repayment.line.view.list</field>
         <field name="model">repayment.line</field>
         <field name="priority" eval="8"/>
         <field name="arch" type="xml">
-            <tree string="Loan Request" create="false">
+            <list string="Loan Request" create="false">
                 <field name="name"/>
                 <field name="partner_id"/>
                 <field name="loan_id"/>
@@ -35,7 +35,7 @@
                 <field name="total_amount"/>
                 <field name="company_id"/>
                 <field name="state"/>
-            </tree>
+            </list>
         </field>
     </record>
 
