--- a/ohrms_loan/views/hr_loan_views.xml
+++ b/ohrms_loan/views/hr_loan_views.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!--Tree View of hr_loan model-->
-    <record id="hr_loan_view_tree" model="ir.ui.view">
-        <field name="name">hr.loan.view.tree</field>
+    <record id="hr_loan_view_list" model="ir.ui.view">
+        <field name="name">hr.loan.view.list</field>
         <field name="model">hr.loan</field>
         <field name="arch" type="xml">
-            <tree string="Loan Requests">
+            <list string="Loan Requests">
                 <field name="name"/>
                 <field name="employee_id"/>
                 <field name="loan_amount"/>
                 <field name="date"/>
                 <field name="state"/>
-            </tree>
+            </list>
         </field>
     </record>
     <!--Form View of hr_loan model-->
@@ -63,12 +63,12 @@
                     <notebook>
                         <page string="Installments">
                             <field name="loan_lines">
-                                <tree string="Installments" editable="bottom">
+                                <list string="Installments" editable="bottom">
                                     <field name="date"/>
                                     <field name="amount"/>
                                     <field name="paid"
                                            column_invisible="True"/>
-                                </tree>
+                                </list>
                             </field>
                             <group class="oe_subtotal_footer oe_right"
                                    colspan="2">
@@ -117,7 +117,7 @@
     <record id="hr_loan_action" model="ir.actions.act_window">
         <field name="name">Request for Loan</field>
         <field name="res_model">hr.loan</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="context">{'search_default_myrequest': 1}</field>
         <field name="search_view_id" ref="hr_loan_view_search"/>
         <field name="help" type="html">
@@ -135,9 +135,9 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">hr.loan</field>
         <field name="binding_model_id" ref="hr.model_hr_employee"/>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="context">{'search_default_myloan': 1}</field>
-        <field name="view_id" eval="hr_loan_view_tree"/>
+        <field name="view_id" eval="hr_loan_view_list"/>
     </record>
     <!--Loan Menus-->
     <menuitem id="hr_loan_menu_root" name="Loans &amp; Advances"
