--- a/einv_sa/view/partner.xml
+++ b/einv_sa/view/partner.xml
@@ -16,7 +16,7 @@
                 <!--class="o_address_zip"-->
                 <xpath expr="//field[@name='street2']" position="after">
                     <field name="district" placeholder="District"></field>
-                    <div class="d-flex justify-content-start">
+                    <group class="d-flex justify-content-start">
                         <field name="zip" placeholder="ZIP" class="mr-2"
                                attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
 
@@ -26,12 +26,12 @@
                            <field name="building_no" placeholder="Building No"
                                attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
 
-                    </div>
+                    </group>
 
                 </xpath>
 
                 <xpath expr="//field[@name='country_id']" position="after">
-                    <div class="d-flex justify-content-start">
+                    <group class="d-flex justify-content-start">
                           <field name="city" placeholder="City" class="mr-3"
                            attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
 
@@ -39,7 +39,7 @@
                            options="{'no_open': True, 'no_quick_create': True}"
                            attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"
                            context="{'country_id': country_id, 'default_country_id': country_id, 'zip': zip}"/>
-                    </div>
+                    </group>
 
 
                 </xpath>
