--- a/einv_sa/report/account_move.xml
+++ b/einv_sa/report/account_move.xml
@@ -14,32 +14,32 @@
         </record>
 
         <template id="einv_sa.inv_header">
-            <div class="row p-1 my-2 border-bottom bg-light">
-                <div class="col-12 text-center" style="font-size:1.2rem;">
+            <group class="row p-1 my-2 border-bottom bg-light">
+                <group class="col-12 text-center" style="font-size:1.2rem;">
                     <Strong>Tax Invoice فاتورة ضريبية</Strong>
                     <span t-if="doc.move_type=='out_refund'"> - Credit Note إشعار دائن</span>
                     <span t-if="doc.move_type=='in_refund'"> - Debit Note إشعار مدين</span>
-                </div>
-            </div>
-            <div class="row my-1">
-                <div class="col-9">
-                    <div class="row">
-                        <div class="col-4"><Strong>Invoice Number</Strong></div>
-                        <div class="col-4 text-center"><span t-field="doc.name"></span></div>
-                        <div class="col-4 text-right"><Strong>رقم الفاتورة</Strong></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4"><Strong>Invoice Date</Strong></div>
-                        <div class="col-4 text-center"><span t-field="doc.invoice_date"></span></div>
-                        <div class="col-4 text-right"><Strong>تاريخ الفاتورة</Strong></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4"><Strong>Date of Supply</Strong></div>
-                        <div class="col-4 text-center"><span t-field="doc.einv_sa_delivery_date"></span></div>
-                        <div class="col-4 text-right"><Strong>تاريخ التوريد</Strong></div>
-                    </div>
-                </div>
-                <div class="col-3" >
+                </group>
+            </group>
+            <group class="row my-1">
+                <group class="col-9">
+                    <group class="row">
+                        <group class="col-4"><Strong>Invoice Number</Strong></group>
+                        <group class="col-4 text-center"><span t-field="doc.name"></span></group>
+                        <group class="col-4 text-right"><Strong>رقم الفاتورة</Strong></group>
+                    </group>
+                    <group class="row">
+                        <group class="col-4"><Strong>Invoice Date</Strong></group>
+                        <group class="col-4 text-center"><span t-field="doc.invoice_date"></span></group>
+                        <group class="col-4 text-right"><Strong>تاريخ الفاتورة</Strong></group>
+                    </group>
+                    <group class="row">
+                        <group class="col-4"><Strong>Date of Supply</Strong></group>
+                        <group class="col-4 text-center"><span t-field="doc.einv_sa_delivery_date"></span></group>
+                        <group class="col-4 text-right"><Strong>تاريخ التوريد</Strong></group>
+                    </group>
+                </group>
+                <group class="col-3" >
 <!--                    <span t-esc="doc.einv_sa_qr_code_str"></span>-->
                     <img t-if="doc.einv_sa_qr_code_str"
                          style="display:block;"
@@ -47,93 +47,93 @@
 <!--                      <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s'%('QR', doc.einv_sa_qr_code_str, 130, 130)"   class="float-right my-1"/>-->
 
 
-                </div>
-            </div>
-            <div class="oe_structure"/>
+                </group>
+            </group>
+            <group class="oe_structure"/>
         </template>
 
         <template id="einv_sa.partner_info">
-            <div class="row p-1 mt-1  bg-light">
-                <div class="col-6"><Strong>Buyer</Strong></div>
-                <div class="col-6 text-right"><Strong>العميل</Strong></div>
-            </div>
-            <div class="px-2">
-                <div class="row">
-                    <div class="col-3"><Strong>Name</Strong></div>
-                    <div class="col-5 text-center"><span t-field="doc.partner_id.name"></span></div>
-                    <div class="col-4 text-right"><Strong>الاسم</Strong></div>
-                </div>
-                <div class="row">
-                    <div class="col-3"><Strong>Building No</Strong></div>
-                    <div class="col-5 text-center"><span t-field="doc.partner_id.building_no"></span></div>
-                    <div class="col-4 text-right"><Strong>رقم المبني</Strong></div>
-                </div>
-                <div class="row">
-                    <div class="col-3"><Strong>Street</Strong></div>
-                    <div class="col-5 text-center"><span t-field="doc.partner_id.street"></span></div>
-                    <div class="col-4 text-right"><Strong>اسم الشارع</Strong></div>
-                </div>
-                <div class="row">
-                    <div class="col-3"><Strong>District</Strong></div>
-                    <div class="col-5 text-center"><span t-field="doc.partner_id.district"></span></div>
-                    <div class="col-4 text-right"><Strong>الحي</Strong></div>
-                </div>
-                <div class="row">
-                    <div class="col-3"><Strong>City</Strong></div>
-                    <div class="col-5 text-center"><span t-field="doc.partner_id.city"></span></div>
-                    <div class="col-4 text-right"><Strong>المدينة</Strong></div>
-                </div>
-                <div class="row">
-                    <div class="col-3"><Strong>Country</Strong></div>
-                    <div class="col-5 text-center"><span t-field="doc.partner_id.country_id.name"></span>
-                    </div>
-                    <div class="col-4 text-right"><Strong>البلد</Strong></div>
-                </div>
-                <div class="row">
-                    <div class="col-3"><Strong>Postal Code</Strong></div>
-                    <div class="col-5 text-center"><span t-field="doc.partner_id.zip"></span></div>
-                    <div class="col-4 text-right"><Strong>الرمز البريدي</Strong></div>
-                </div>
-                <div class="row">
-                    <div class="col-3"><Strong>Additional No</Strong></div>
-                    <div class="col-5 text-center"><span t-field="doc.partner_id.additional_no"></span></div>
-                    <div class="col-4 text-right"><Strong>الرقم الاضافي للعنوان</Strong></div>
-                </div>
-                <div class="row">
-                    <div class="col-3"><Strong>Vat Number</Strong></div>
-                    <div class="col-5 text-center"><span t-field="doc.partner_id.vat"></span></div>
-                    <div class="col-4 text-right"><Strong>رقم تسجيل ضريبة القيمة المضافة</Strong></div>
+            <group class="row p-1 mt-1  bg-light">
+                <group class="col-6"><Strong>Buyer</Strong></group>
+                <group class="col-6 text-right"><Strong>العميل</Strong></group>
+            </group>
+            <group class="px-2">
+                <group class="row">
+                    <group class="col-3"><Strong>Name</Strong></group>
+                    <group class="col-5 text-center"><span t-field="doc.partner_id.name"></span></group>
+                    <group class="col-4 text-right"><Strong>الاسم</Strong></group>
+                </group>
+                <group class="row">
+                    <group class="col-3"><Strong>Building No</Strong></group>
+                    <group class="col-5 text-center"><span t-field="doc.partner_id.building_no"></span></group>
+                    <group class="col-4 text-right"><Strong>رقم المبني</Strong></group>
+                </group>
+                <group class="row">
+                    <group class="col-3"><Strong>Street</Strong></group>
+                    <group class="col-5 text-center"><span t-field="doc.partner_id.street"></span></group>
+                    <group class="col-4 text-right"><Strong>اسم الشارع</Strong></group>
+                </group>
+                <group class="row">
+                    <group class="col-3"><Strong>District</Strong></group>
+                    <group class="col-5 text-center"><span t-field="doc.partner_id.district"></span></group>
+                    <group class="col-4 text-right"><Strong>الحي</Strong></group>
+                </group>
+                <group class="row">
+                    <group class="col-3"><Strong>City</Strong></group>
+                    <group class="col-5 text-center"><span t-field="doc.partner_id.city"></span></group>
+                    <group class="col-4 text-right"><Strong>المدينة</Strong></group>
+                </group>
+                <group class="row">
+                    <group class="col-3"><Strong>Country</Strong></group>
+                    <group class="col-5 text-center"><span t-field="doc.partner_id.country_id.name"></span>
+                    </group>
+                    <group class="col-4 text-right"><Strong>البلد</Strong></group>
+                </group>
+                <group class="row">
+                    <group class="col-3"><Strong>Postal Code</Strong></group>
+                    <group class="col-5 text-center"><span t-field="doc.partner_id.zip"></span></group>
+                    <group class="col-4 text-right"><Strong>الرمز البريدي</Strong></group>
+                </group>
+                <group class="row">
+                    <group class="col-3"><Strong>Additional No</Strong></group>
+                    <group class="col-5 text-center"><span t-field="doc.partner_id.additional_no"></span></group>
+                    <group class="col-4 text-right"><Strong>الرقم الاضافي للعنوان</Strong></group>
+                </group>
+                <group class="row">
+                    <group class="col-3"><Strong>Vat Number</Strong></group>
+                    <group class="col-5 text-center"><span t-field="doc.partner_id.vat"></span></group>
+                    <group class="col-4 text-right"><Strong>رقم تسجيل ضريبة القيمة المضافة</Strong></group>
 
-                </div>
-                <div class="row">
-                    <div class="col-3"><Strong>Other ID</Strong></div>
-                    <div class="col-5 text-center"><span t-field="doc.partner_id.other_id"></span></div>
-                    <div class="col-4 text-right"><Strong>معرف آخر</Strong></div>
-                </div>
-                <div class="oe_structure"/>
-            </div>
-            <div class="oe_structure"/>
+                </group>
+                <group class="row">
+                    <group class="col-3"><Strong>Other ID</Strong></group>
+                    <group class="col-5 text-center"><span t-field="doc.partner_id.other_id"></span></group>
+                    <group class="col-4 text-right"><Strong>معرف آخر</Strong></group>
+                </group>
+                <group class="oe_structure"/>
+            </group>
+            <group class="oe_structure"/>
         </template>
 
         <template id="einv_sa.inv_lines">
-            <div class="row p-1 mt-3 bg-light">
-                <div class="col-6"><Strong>Invoice Lines</Strong></div>
-                <div class="col-6 text-right"><Strong>الاصناف</Strong></div>
-            </div>
+            <group class="row p-1 mt-3 bg-light">
+                <group class="col-6"><Strong>Invoice Lines</Strong></group>
+                <group class="col-6 text-right"><Strong>الاصناف</Strong></group>
+            </group>
             <table class="table table-sm o_main_table " name="invoice_line_ids_table">
                 <thead class="bg-light text-center">
                     <tr>
-                        <td class="text-left"><div class="mw-100">Name</div><div class="mw-100 ">
-                            الصنف</div></td>
-                        <td><div class="mw-100">Price Unit</div><div class="mw-100 "> سعر الوحدة</div></td>
-                        <td><div class="mw-100">Quantity</div><div class="mw-100 "> الكمية</div></td>
-                        <td><div class="mw-100">Discount</div><div class="mw-100 "> الخصم</div></td>
-                        <td><div class="mw-100">Taxes</div><div class="mw-100 "> نسبة الضريبة</div></td>
-                        <td><div class="mw-100">Amount tax</div><div class="mw-100 ">مبلغ الضريبة</div></td>
-                        <td><div class="mw-100">Taxable Amount</div><div class="mw-100 "> المبلغ الخاضع
-                            للضريبة</div></td>
-                        <td><div class="mw-100">Price Total (with Vat)</div><div class="mw-100 "> الاجمالي شامل
-                            الضريبة المضافة</div></td>
+                        <td class="text-left"><group class="mw-100">Name</group><group class="mw-100 ">
+                            الصنف</group></td>
+                        <td><group class="mw-100">Price Unit</group><group class="mw-100 "> سعر الوحدة</group></td>
+                        <td><group class="mw-100">Quantity</group><group class="mw-100 "> الكمية</group></td>
+                        <td><group class="mw-100">Discount</group><group class="mw-100 "> الخصم</group></td>
+                        <td><group class="mw-100">Taxes</group><group class="mw-100 "> نسبة الضريبة</group></td>
+                        <td><group class="mw-100">Amount tax</group><group class="mw-100 ">مبلغ الضريبة</group></td>
+                        <td><group class="mw-100">Taxable Amount</group><group class="mw-100 "> المبلغ الخاضع
+                            للضريبة</group></td>
+                        <td><group class="mw-100">Price Total (with Vat)</group><group class="mw-100 "> الاجمالي شامل
+                            الضريبة المضافة</group></td>
 
                     </tr>
                 </thead>
@@ -156,51 +156,51 @@
                     </tr>
                 </tbody>
             </table>
-            <div class="oe_structure"/>
+            <group class="oe_structure"/>
         </template>
 
 
         <template id="einv_sa.inv_total">
-            <div style="page-break-inside: avoid;">
-                <div class="row p-1 mt-1 bg-light">
-                    <div class="col-6"><Strong>Total Amount: </Strong></div>
-                    <div class="col-6 text-right"><Strong>:الاجمالي</Strong></div>
-                </div>
-                <div class="row">
-                    <div class="col-2"></div>
-                    <div class="col-10">
-                        <div class="row border border-top-0">
-                            <div class="col-4">Total (Excluding VAT)</div>
-                            <div class="col-6 text-right">الاجمالي غير شامل ضريبة القيمة المضافة</div>
-                            <div class="col-2 text-center"><span t-field="doc.einv_amount_sale_total"></span></div>
-                        </div>
-                        <div class="row border border-top-0">
-                            <div class="col-4">Discount</div>
-                            <div class="col-6 text-right">إجمالي الخصومات</div>
-                            <div class="col-2 text-center"><span
-                                    t-field="doc.einv_amount_discount_total"></span></div>
-                        </div>
-                        <div class="row border border-top-0">
-                            <div class="col-4">Total Taxable Amount (Excluding VAT)</div>
-                            <div class="col-6 text-right">الإجمالي الخاضع للضريبة غير شامل ضريبة القيمة
-                                المضافة</div>
-                            <div class="col-2 text-center"><span t-field="doc.amount_untaxed"></span></div>
-                        </div>
-                        <div class="row border border-top-0">
-                            <div class="col-4">Total VAT</div>
-                            <div class="col-6 text-right">إجمالي الضريبة المضافة</div>
-                            <div class="col-2 text-center"><span t-field="doc.amount_tax_signed"></span></div>
-                        </div>
-                        <div class="row border border-top-0">
-                            <div class="col-4">Total Amount Due</div>
-                            <div class="col-6 text-right"> الإجمالي المستحق </div>
-                            <div class="col-2 text-center"><span t-field="doc.amount_total"></span></div>
-                        </div>
-                    </div>
+            <group style="page-break-inside: avoid;">
+                <group class="row p-1 mt-1 bg-light">
+                    <group class="col-6"><Strong>Total Amount: </Strong></group>
+                    <group class="col-6 text-right"><Strong>:الاجمالي</Strong></group>
+                </group>
+                <group class="row">
+                    <group class="col-2"></group>
+                    <group class="col-10">
+                        <group class="row border border-top-0">
+                            <group class="col-4">Total (Excluding VAT)</group>
+                            <group class="col-6 text-right">الاجمالي غير شامل ضريبة القيمة المضافة</group>
+                            <group class="col-2 text-center"><span t-field="doc.einv_amount_sale_total"></span></group>
+                        </group>
+                        <group class="row border border-top-0">
+                            <group class="col-4">Discount</group>
+                            <group class="col-6 text-right">إجمالي الخصومات</group>
+                            <group class="col-2 text-center"><span
+                                    t-field="doc.einv_amount_discount_total"></span></group>
+                        </group>
+                        <group class="row border border-top-0">
+                            <group class="col-4">Total Taxable Amount (Excluding VAT)</group>
+                            <group class="col-6 text-right">الإجمالي الخاضع للضريبة غير شامل ضريبة القيمة
+                                المضافة</group>
+                            <group class="col-2 text-center"><span t-field="doc.amount_untaxed"></span></group>
+                        </group>
+                        <group class="row border border-top-0">
+                            <group class="col-4">Total VAT</group>
+                            <group class="col-6 text-right">إجمالي الضريبة المضافة</group>
+                            <group class="col-2 text-center"><span t-field="doc.amount_tax_signed"></span></group>
+                        </group>
+                        <group class="row border border-top-0">
+                            <group class="col-4">Total Amount Due</group>
+                            <group class="col-6 text-right"> الإجمالي المستحق </group>
+                            <group class="col-2 text-center"><span t-field="doc.amount_total"></span></group>
+                        </group>
+                    </group>
 
-                </div>
-            </div>
-            <div class="oe_structure"/>
+                </group>
+            </group>
+            <group class="oe_structure"/>
 
         </template>
 
@@ -209,7 +209,7 @@
             <t t-debug=""></t>
             <t t-call="web.external_layout">
                 <t t-set="doc" t-value="doc.with_context({'lang': lang})"/>
-                <div class="page">
+                <group class="page">
 
                     <!-- Invoice fields-->
                     <t t-call="einv_sa.inv_header"/>
@@ -222,7 +222,7 @@
 
                     <!-- Invoice total-->
                     <t t-call="einv_sa.inv_total"/>
-                </div>
+                </group>
 
             </t>
         </template>
