--- a/einv_sa/view/partner.xml
+++ b/einv_sa/view/partner.xml
@@ -17,14 +17,15 @@
                 <xpath expr="//field[@name='street2']" position="after">
                     <field name="district" placeholder="District"></field>
                     <group class="d-flex justify-content-start">
-                        <field name="zip" placeholder="ZIP" class="mr-2"
-                               attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
+                        <field name="zip" placeholder="ZIP" class="mr-2"/>
 
-                        <field name="additional_no" placeholder="Additional No" class="mr-2"
-                               attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
+                               <!-- attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/> -->
 
-                           <field name="building_no" placeholder="Building No"
-                               attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
+                        <field name="additional_no" placeholder="Additional No" class="mr-2"/>
+                               <!-- attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/> -->
+
+                           <field name="building_no" placeholder="Building No"/>
+                               <!-- attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/> -->
 
                     </group>
 
@@ -32,14 +33,14 @@
 
                 <xpath expr="//field[@name='country_id']" position="after">
                     <group class="d-flex justify-content-start">
-                          <field name="city" placeholder="City" class="mr-3"
-                           attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/>
+                          <field name="city" placeholder="City" class="mr-3"/>
+                           <!-- attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"/> -->
 
                           <field name="state_id"  placeholder="State"
                            options="{'no_open': True, 'no_quick_create': True}"
-                           attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}"
                            context="{'country_id': country_id, 'default_country_id': country_id, 'zip': zip}"/>
                     </group>
+                           <!-- attrs="{'readonly': [('type', '=', 'contact'),('parent_id', '!=', False)]}" -->
 
 
                 </xpath>
